2011-12-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2io.cc (jtag2::startJtagLink): external reset is
	only applicable to the JTAG protocol

2011-12-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2io.cc (jtag2::initJtagOnChipDebugging): ensure the
	device went once through a programming-mode cycle, as at least
	firmware 7.13 otherwise gets royally confused on Xmega devices.

2011-12-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2io.cc (jtag2::startJtagLink): set the signedIn flag
	as soon as we succeeded with synchronizeAt() (which has sent
	the sign-on message), so we properly say good-bye afterwards

2011-12-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2run.cc (jtag2::resetProgram): Fix a logic error
	introduced in r259.

2011-12-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2usb.cc (opendev): Don't attempt to free(serno); it's
	the result of strchr() rather than any kind of memory allocation
	operation.

2011-12-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag.h: Get rid of bogus fuse definition enum values
	(would only match on some devices anyway); bump
	MAX_FLASH_PAGE_SIZE and MAX_EEPROM_PAGE_SIZE for Xmega (though
	that's currently not really usable).
2011-12-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag.h: Get rid of the global variable global_p_device_def,
	replacing it by public member deviceDef
	* src/remote.cc: (Dito.)
	* src/jtag2io.cc: (Dito.)
	* src/jtagio.cc: (Dito.)
	* src/jtag2rw.cc: (Dito.)
	* src/jtag2bp.cc: (Dito.)
	* src/devdescr.cc: (Dito.)
	* src/jtaggeneric.cc: (Dito.)

2011-12-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Major overhaul of the fuse handling.
	* src/jtag.h: add device config parameters `fusemap' and
	`ocden_fuse'; add method jtagActivateOcdenFuse() to centralize the
	OCDEN fuse activation
	* src/devdescr.cc: add fusemap and ocden_fuse values
	* src/jtaggeneric.cc: implement jtagActivateOcdenFuse(), restrict